--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,42 @@
   <groupId>Projet_Genie_Logiciel</groupId>
   <artifactId>calculator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+<dependencies>
+<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.12</version>
+</dependency>
+</dependencies>
+
+<build>
+<sourceDirectory>src/main/java</sourceDirectory>
+<plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.1</version>
+    <configuration>
+      <source>1.7</source>
+      <target>1.7</target>
+    </configuration>
+  </plugin>
+  <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.7</version>
+    <configuration>
+      <formats>
+        <format>html</format>
+        <format>xml</format>
+      </formats>
+      <check />
+    </configuration>
+  </plugin>
+
+
+
+</plugins>
+</build>
 </project>
